# cleanshot-hypersort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-ocr-macos.txt  requirements.txt  run.py  start.bat  start.command
cleanshot/: app.py
cleanshot/core/: activity.py  advanced_recognition.py  brain.py  classifier.py  config.py  organizer.py  stats.py  watcher.py
cleanshot/ui/: main_window.py  styles.py
tests/: test_smart_pipeline.py
tools/: classify_image.py  debug_brain.py  reset_brain.py  teach_image.py
